# memcontainers

./: AGENTS.md  Cargo.toml  Makefile
crates/host-wasmtime/: Cargo.toml
crates/host-wasmtime/src/: main.rs  terminal.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: bridge.rs  kernel.rs  lib.rs
crates/kernel/src/builtins/: fs.rs  mod.rs  text.rs
crates/kernel/src/fs/: memfs.rs  mod.rs
crates/kernel/src/shell/: executor.rs  mod.rs  parser.rs
crates/kernel/src/vfs/: mod.rs  namespace.rs  traits.rs
