[workspace]
members = [
    "crates/kernel",
    "crates/host-wasmtime",
]
resolver = "2"

[profile.release]
opt-level = "s"   # size over speed for WASM
lto = true
panic = "abort"   # required for no_std WASM

[profile.release-native]
inherits = "release"
opt-level = 3     # speed for the host binary